# firebot_dragon

./: .copilot-instructions.md  .gitignore  1.txt  include  readme.md
.hk_camera/: CMakeLists.txt  package.xml
.hk_camera/consoleDemo/src/: Alarm.cpp  GetStream.dpp  Voice.cpp  consoleMain.cpp  playback.cpp
.hk_camera/src/: fireinfo_pub.cpp  hk_camera_pub_decode.cpp  hk_camera_pub_jpeg.cpp
cartographer/cartographer_2d_nav/: package.xml  setup.cfg  setup.py
cartographer/cartographer_2d_nav/launch/: cartographer.launch.py  navigation2.launch.py
cartographer/cartographer_2d_nav/param/: burger.yaml  cartographer.yaml
cartographer/cartographer_2d_slam/: package.xml  setup.cfg  setup.py
cartographer/cartographer_2d_slam/config/: fishbot_2d.lua  husky.lua  localization.lua  temp.lua  turtlebot3_lds_2d.lua
cartographer/cartographer_2d_slam/launch/: slam_2d.launch.py
cartographer/cartographer_slam_nav/: package.xml  setup.cfg  setup.py
cartographer/cartographer_slam_nav/launch/: bringup_launch.py  localization_launch.py  nav_2d.launch.py  nav_2d_bringup.launch.py  slam_2d.launch.py
cartographer/cartographer_slam_nav/param/: localization_2d.lua  localization_3d.lua  nav2_2d.yaml  slam_2d.lua  slam_3d.lua
consoleDemo/src/: CapPicture.cpp  ConfigParams.cpp  GetStream.cpp  GetStream.h
dabai_dcw/: package.xml  setup.cfg  setup.py
dabai_dcw/launch/: dabai_dcw.launch.py  dabai_dcw_orbbec.launch.py
dabai_dcw/launch/Log/: OrbbecSDK.log.txt
diff_drive_robot/: CMakeLists.txt  package.xml
diff_drive_robot/config/: gz_bridge.yaml  ros2_control.yaml
diff_drive_robot/launch/: load_ros2_controllers.launch.py  robot.launch.py  robot_display.launch.py  rsp.launch.py
diff_drive_robot/urdf/: 1.urdf  astra_pro_plus.urdf.xacro  dabai_dcw.urdf.xacro  gazebo_control.xacro  hk_ir_camera.urdf.xacro  imu_1500.xacro  imu_handsfree_a9.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros_control.xacro
fire_bussiness/: package.xml  setup.cfg  setup.py
fire_bussiness/config/: config.yaml
fire_bussiness/fire_bussiness/: detect.py  log.py  marker_publisher.py  position.py  socket_shell.py  stuck.py
fire_bussiness/fire_bussiness/backup/: RegionScanner.py  back.back  costmap.py  detect.py
fire_bussiness/launch/: detect.launch.py
fire_interfaces/: CMakeLists.txt  package.xml
fire_interfaces/action/: FireExtinguishing.action  RotateSearch.action
fire_interfaces/msg/: ChassisCtrl.msg  FireInfo.msg
fire_interfaces/srv/: RotateSrv.srv  SetInitialPoseSrv.srv  SetNavigationGoalSrv.srv
hk_camera/: CMakeLists.txt  package.xml
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/MakeAll/HCNetSDKCom/: sdkTest
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/C++示例/consoleDemo/linux64/: MakeAll
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/C++示例/consoleDemo/linux64/proj/: Makefile
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/C++示例/consoleDemo/src/: ConfigParams.cpp  consoleMain.cpp
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/C++示例/psdatacall_demo/: Makefile
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/Java示例/Java_AlarmDemo/: 请先看这里：Demo内容说明和注意事项.txt
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/Java示例/Java_AlarmDemo/AlarmDemo/: .classpath
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/Java示例/Java_AlarmDemo/AlarmDemo/src/CommonMethod/: PropertiesUtil.java
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/Java示例/Java_AlarmDemo/AlarmDemo/src/NetSDKDemo/: HCNetSDK.java  SDK_Structure.java
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/Java示例/Java_AlarmDemo/AlarmDemo/src/alarm/: Alarm.java  AlarmDataParse.java
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/Java示例/Java_ClientDemo/: 请先看这里：Demo内容说明和注意事项.txt
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/Java示例/Java_ClientDemo/ClientDemo/: config.properties
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/Java示例/Java_ClientDemo/ClientDemo/src/Common/: PropertiesUtil.java
hk_camera/HCNetSDKV6.1.9.45_build20220902_ArmLinux64_ZH/demo/Java示例/Java_ClientDemo/ClientDemo/src/com/NetSDKDemo/: ClientDemo.java  HCNetSDK.java  SDK_Structure.java  VideoDemo.java
hk_camera/config/: hk.yaml
hk_camera/launch/: fireinfo.launch.py  jpeg.launch.py
hk_camera/scripts/: hk_camera_color_sub.py  hk_camera_synchronized_republisher.py  ros2_rmw_benchmark.py  scan_ip.py  triangle_height.py
hk_camera/src/: fireinfo_pub copy.cpp  fireinfo_pub.cpp  hk_camera_ffmpeg_rtsp.cpp  hk_camera_pub_decode.cpp  hk_camera_pub_jpeg.cpp
imu_hfi_a9/: package.xml  setup.cfg  setup.py
imu_hfi_a9/config/: config.yaml
imu_hfi_a9/imu_hfi_a9/: pub_msg.py
imu_hfi_a9/launch/: imu.launch.py
jetson_rover/: readme.md
jetson_rover/bringup_jetson/: package.xml  setup.cfg  setup.py
jetson_rover/bringup_jetson/config/: ekf.yaml  tags_36h11.yaml
jetson_rover/bringup_jetson/launch/: bringup.launch.py  camera_36h11.launch.yml  lidar_filter.launch.py  odom_filter.launch.py
jetson_rover/motion_jetson/: package.xml  setup.cfg  setup.py
jetson_rover/motion_jetson/config/: param.yaml
jetson_rover/motion_jetson/launch/: motion.launch.py
jetson_rover/motion_jetson/motion_jetson/: motion.py  motion_jetson.py
jetson_rover/nav2_jetson/: package.xml  setup.cfg  setup.py
jetson_rover/nav2_jetson/config/: nav2_bringup.yaml  nav2_controller_dwb.yaml  nav2_params.yaml  nav2_params_base.yaml  spatio_temporal_voxel_layer.yaml  voxel_layer.yaml
jetson_rover/nav2_jetson/launch/: nav2_bringup.launch.py  navigation.launch.py  (+2 more)
jetson_rover/odom_filter_jetson/: package.xml  setup.cfg  setup.py
jetson_rover/rtabmap_jetson/: package.xml  setup.cfg  setup.py
jetson_rover/scan_filter_jetson/: package.xml  setup.cfg  setup.py
jetson_rover/slam_toolbox_jetson/: package.xml  setup.cfg  setup.py
temp/: change_params_by_client.py  change_params_by_service.py
usblink/src/: usb.cpp
ydlidar_g4/: package.xml  setup.cfg  setup.py
ydlidar_g4/launch/: ydlidar_g4.launch.py
(+12 files in other folders)
